Fix test, add no arg constructors to DTOs